--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,13 @@ body.vsc-initialized {
     rgb(48, 48, 158),
     rgb(0, 145, 0)
   );
+  text-align: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+select.form-select {
+  width: 200px;
 }
 
 .card button{
@@ -33,6 +29,10 @@ body.vsc-initialized {
   padding: 10px 30px;
 }
 
+footer {
+  text-align: center!important;
+}
+
 .card img{
   max-width: 350px;
   margin: 10px auto;
@@ -40,32 +40,18 @@ body.vsc-initialized {
   border: 3px solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media screen and (max-width:720px){
+@media screen and (max-width:990px){
   .card img{
     width:80%;
+  }
+  select.form-select {
+    display: none;
+  }  
+}
+
+@media screen and (min-width:1800px){
+  .card {
+    width:60%;
   }
 }
