--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body.vsc-initialized {
     rgb(48, 48, 158),
     rgb(0, 145, 0)
   );
+  background-color: rgb(140, 255, 148);
   text-align: center;
   background-repeat: no-repeat;
   min-height: 100vh;
